Revert "emperor update"
This reverts commit 2965c1c3db6b2f97eba9dc56f0bac90d6f970702.

--- a/en/sikh_l_english.properties
+++ b/en/sikh_l_english.properties
@@ -1,4 +1,4 @@
-﻿guru_angad코0=Guru Angad
+guru_angad코0=Guru Angad
 desc_guru_angad코0=The Sikh Guru is spreading the use of the Gurmukhi alphabet, promoting education.
 guru_amar_das코0=Guru Amar Das
 desc_guru_amar_das코0=The Sikh Guru has sent out local representatives called Masand to spread the faith and guide Sikhs.
@@ -21,8 +21,8 @@ save_the_burning_world_desc코0=Our faith was born seeking unity where there was
 saving_the_burning_world코0=Saving the Burning World
 desc_saving_the_burning_world코0=We have taken it upon ourselves to root out evil in the world by showing people the true path, even if it means offending other faiths.
 sikhism_flavor.1.t코0=The Sikh Faith
-sikhism_flavor.1.d코0=[Root.GetName] is situated on the border between adherents of Hinduism and Islam. In this area marked by religious tension and differences, a man named Nanak has started to preach that there is no Hindu or Muslim, but that the truth is with God, who is neither.\n\nAlthough his rejection of ancient customs has outraged devoted [Root.Religion.GetName] believers, Nanak's disregard for caste and creed has allowed his teachings to take root among the population. His disciples are known as Sikhs and are spreading this new faith rapidly throughout [Root.GetName].
-sikhism_flavor.1.a코0=We'll need to talk to this Nanak about the [Root.Owner.Religion.GetName] faith.
+sikhism_flavor.1.d코0={Root.GetName} is situated on the border between adherents of Hinduism and Islam. In this area marked by religious tension and differences, a man named Nanak has started to preach that there is no Hindu or Muslim, but that the truth is with God, who is neither.\n\nAlthough his rejection of ancient customs has outraged devoted {Root.Religion.GetName} believers, Nanak's disregard for caste and creed has allowed his teachings to take root among the population. His disciples are known as Sikhs and are spreading this new faith rapidly throughout {Root.GetName}.
+sikhism_flavor.1.a코0=We'll need to talk to this Nanak about the {Root.Owner.Religion.GetName} faith.
 sikhism_flavor.2.t코0=Guru Angad
 sikhism_flavor.2.d코0='Death would not be called bad, O people, if one knew how to truly die.'\n\nThe founder of our faith has passed away. Guru Nanak's body is dead, but the spirit of the Guru lives on in his successor, Guru Angad. Angad was one of Nanak's most loyal followers and carries on his legacy in establishing the Sikh community, spreading the use of a new alphabet to promote education of the young.
 sikhism_flavor.2.a코0=The light of the Guru shines on.
@@ -55,10 +55,10 @@ sikhism_flavor.11.d코0=Guru Gobind Singh is gone, but has passed on the gurushi
 sikhism_flavor.11.a코0=Those who want to meet God can find Him in its hymns.
 sikhism_flavor.11.b코0=The Guru is the Fulfiller of the desires of the mind.
 sikhism_flavor.12.t코0=No More Gurus
-sikhism_flavor.12.d코0=[Root.GetName] is now a [Root.Religion.GetName] state. We no longer call ourselves Sikhs, and have accordingly cut off ties with the Sikh Guru.
-sikhism_flavor.12.a코0=The [Root.Religion.GetName] path will guide us from now on.
-sikhism_flavor.13.t코1=Guru in [Root.GetName]
-sikhism_flavor.13.d코0=A man who some call a guru has arrived in [Root.GetName]. He claims to have received a revelation, being called by Heaven to travel from his home to distant lands, spreading the message of the one true God.\n\nHis local disciples insist that this God is revealed through all religions, including [Root.Owner.Religion.GetName], and defends Nanak as simply revealing the truths in our own faith. However, there is no question that these teachings reject our rituals and traditions, making people stray from the true path of [Root.Owner.Religion.GetName].
-sikhism_flavor.13.dnanaknolonger코0=A man who some call a guru has arrived in [Root.GetName]. He claims to have received a revelation, being called by Heaven to travel from his home to distant lands, spreading the message of the one true God.\n\nHis local disciples insist that this God is revealed through all religions, including [Root.Owner.Religion.GetName], and defends him as simply revealing the truths in our own faith. However, there is no question that these teachings reject our rituals and traditions, making people stray from the true path of [Root.Owner.Religion.GetName].
+sikhism_flavor.12.d코0={Root.GetName} is now a {Root.Religion.GetName} state. We no longer call ourselves Sikhs, and have accordingly cut off ties with the Sikh Guru.
+sikhism_flavor.12.a코0=The {Root.Religion.GetName} path will guide us from now on.
+sikhism_flavor.13.t코1=Guru in {Root.GetName}
+sikhism_flavor.13.d코0=A man who some call a guru has arrived in {Root.GetName}. He claims to have received a revelation, being called by Heaven to travel from his home to distant lands, spreading the message of the one true God.\n\nHis local disciples insist that this God is revealed through all religions, including {Root.Owner.Religion.GetName}, and defends Nanak as simply revealing the truths in our own faith. However, there is no question that these teachings reject our rituals and traditions, making people stray from the true path of {Root.Owner.Religion.GetName}.
+sikhism_flavor.13.dnanaknolonger코0=A man who some call a guru has arrived in {Root.GetName}. He claims to have received a revelation, being called by Heaven to travel from his home to distant lands, spreading the message of the one true God.\n\nHis local disciples insist that this God is revealed through all religions, including {Root.Owner.Religion.GetName}, and defends him as simply revealing the truths in our own faith. However, there is no question that these teachings reject our rituals and traditions, making people stray from the true path of {Root.Owner.Religion.GetName}.
 sikhism_flavor.13.a코0=As long as they pay taxes, they can believe what they want.
-sikhism_flavor.13.b코1=Get this man out of [Root.GetName]!
+sikhism_flavor.13.b코1=Get this man out of {Root.GetName}!
