--- a/en/social_l_english.properties
+++ b/en/social_l_english.properties
@@ -1,4 +1,4 @@
-﻿SOCIAL_BUTTON_STATUS_DISCONNECTED코0=§YLogged off§!
+SOCIAL_BUTTON_STATUS_DISCONNECTED코0=§YLogged off§!
 SOCIAL_BUTTON_STATUS_FAILED코0=§RUnexpected Error§!
 SOCIAL_ALREADY_FRIENDS코0=You are friends
 SOCIAL_NEW_MESSAGE코0=§GYou have a new Message!§!
@@ -128,7 +128,7 @@ LINK_ACCOUNTS_DONT_REMIND코0=Don't remind me again\n(you can still link account
 SKIP_LINK_ACCOUNTS코0=Skip linking
 AGREE_LINK_ACCOUNTS코0=Link accounts
 CREATE_PROFILE_TITLE코0=Choose a username
-CREATE_PROFILE_DESCRIPTION코1=Every general needs a name. This username will be used across all Paradox games and online features and cannot be changed after it's been decided.\n\nChoose wisely!
+CREATE_PROFILE_DESCRIPTION코0=Every space general need a name. This username will be used across all Paradox games and online features and cannot be changed after it's been decided.\n\nChoose wisely!
 CREATE_PROFILE_USERNAME코0=Username
 CREATE_PROFILE_CONFIRM코0=Confirm
 SOCIAL_JOIN_REQUEST_SENT코0=Join request sent
