--- a/en/subscription_l_english.properties
+++ b/en/subscription_l_english.properties
@@ -1,8 +1,8 @@
-﻿SUB_VIEW_PITCH_NOPRICE코0=Gain access to all DLC ever released for a monthly payment.\n\n- All major expansions!\n- More than 40 content packs including new units models\n- All music packs\n- New unit model available as a bonus for subscription
+SUB_VIEW_PITCH_NOPRICE코0=Gain access to all DLC ever released for a monthly payment.\n\n- All major expansions!\n- More than 40 content packs including new units models\n- All music packs\n- New unit model available as a bonus for subscription
 SUB_VIEW_PITCH_PRICE코0=Experience everything the game has to offer with the new subscription offer: gain access to all DLC ever released for only $PRICE$/month.\n\n- All major expansions!\n- More than 40 content packs including new units models\n- All music packs\n- New unit model available as a bonus for subscription
 SUB_ACTIVE_NEED_DOWNLOAD코0=You can now download all DLC. It won't take long!\nAfter downloading you'll need to restart the game to complete the installation process.
 SUB_ACTIVE_NEED_RESTART코0=Restart your game to finish installation.
-SUB_ACTIVE_NORMAL코0=All available DLC have been installed.\nIf some DLC do not work properly, you can verify your installation by pressing "Verify".
+SUB_ACTIVE_NORMAL코0=All available DLC have been installed.\nIf some DLC do not work properly, you can verify your installation by pressing \"Verify\".
 SUB_ACTIVE_VERIFYING_DOWNLOAD코0=Verification is in progress
 SUB_VIEW_BONUS_DLC코0=Subscription bonus
 SUB_VIEW_BONUS_DLC_DESC코0=Starting a subscription will\nreward you with a European\npistol-wielding Cuirassiers\nunit.
@@ -69,5 +69,3 @@ SUB_ACTIVE_SUBSCRIBED_NEWLY코0=Congratulations, you have successfully subscribe
 RESTART코0=Restart
 PURCHASE코0=Purchase
 GS_MESSAGE_OPEN_URL코0=Read More
-SUB_VIEW_OVERLAY_DISABLED_TITLE코0=Steam Overlay Disabled
-SUB_VIEW_OVERLAY_DISABLED_DESC코0=To proceed with the purchase you need to enable the Steam overlay for Europa Universalis IV.
