--- a/en/tradenodes_l_english.properties
+++ b/en/tradenodes_l_english.properties
@@ -1,4 +1,4 @@
-﻿ON_TRADE_MISSION_IRO코0=Protecting our trading interests in §Y$WHERE$§! with §Y$COUNT$§! light ships.
+ON_TRADE_MISSION_IRO코0=Protecting our trading interests in §Y$WHERE$§! with §Y$COUNT$§! light ships.
 ON_PRIVATEER_MISSION_IRO코0=Harassing our enemies' trading interests in §Y$WHERE$§! with §Y$COUNT$§! light ships.
 TRADEMAP_OUTGOING코0=§Y$VAL$§W¤ is being sent forward to §Y$NAME$§W. 
 TRADEMAP_OUTGOING_BASE코0=Before countries increase the outgoing trade value, $BASEVAL$¤ is leaving $FROMNODE$.
@@ -180,7 +180,7 @@ NO_TRADE_COMPANY_GROUP코0=Your Technology Group does not allow for Trade Compan
 NO_TRADE_COMPANY_OVERSEAS코0=You can only create Trade Companies overseas.
 TRADE_NAME_SORT_TOOLTIP코0=Sort by Country
 WHO_HAS_TRADE_COMPANY_IN코0=$WHO|Y$ has a trade company in $REGION|Y$.
-GOODS_PRODUCED_BONUS코1=§YProduction Increase§!\nThe Trade Companies in this region boost the amount of goods produced in all non trade company provinces by $VAL|2+=%$ due to:\n$WHY$
+GOODS_PRODUCED_BONUS코0=The Trade Companies in this region boost the amount of goods produced by non-Western countries by $VAL|1Y%$.
 TRADE_SHIPS_IN_NODE코0=You have $COUNT|Y$ light ships protecting trade in this node.\nThey generate $TRADEPOWER|Y$ trade power.
 PRIVATEERS_IN_NODE코0=You have $PRIVATEERCOUNT|Y$ ships on a privateering mission in this node.\nThey have a total of $PRIVATEERTRADEPOWER|Y$ trade power.
 aleppo코0=Aleppo
@@ -195,9 +195,9 @@ chengdu코0=Chengdu
 zambezi코0=Zambezi
 african_great_lakes코0=Great Lakes
 kongo코0=Kongo
-TRADE_COMPANY_INDIA_British_trade_company_south_india코0=[Root.GetAdjective] Bombay Presidency
-TRADE_COMPANY_INDIA_British_trade_company_coromandel코0=[Root.GetAdjective] Madras Presidency
-TRADE_COMPANY_INDIA_British_East_India_Company코1=[Root.GetAdjective] Bengal Presidency
+TRADE_COMPANY_INDIA_British_trade_company_south_india코0={Root.GetAdjective} Bombay Presidency
+TRADE_COMPANY_INDIA_British_trade_company_coromandel코0={Root.GetAdjective} Madras Presidency
+TRADE_COMPANY_INDIA_British_East_India_Company코1={Root.GetAdjective} Bengal Presidency
 trade_company_south_india코0=Konkan Charter
 trade_company_coromandel코0=Coromandel Charter
 trade_company_north_india코0=North Indian Charter
@@ -208,8 +208,8 @@ TRADE_COMPANY_DECCAN_India_Trade_Company코0=Deccan Trade Company
 TRADE_COMPANY_BURMA_India_Trade_Company코0=Burma Trade Company
 TRADE_COMPANY_NORTH_INDIA_India_Trade_Company코0=North Indian Trade Company
 TRADE_COMPANY_COROMANDEL_India_Trade_Company코0=Coromandel Trade Company
-TRADE_COMPANY_BURMA_Root_Culture_GetName코0=[Root.Culture.GetName] Burma Company
-TRADE_COMPANY_SOUTH_INDIA_Root_Culture_GetName코0=[Root.Culture.GetName] Konkan Company
-TRADE_COMPANY_DECCAN_Root_Culture_GetName코0=[Root.Culture.GetName] Deccan Company
-TRADE_COMPANY_COROMANDEL_Root_Culture_GetName코0=[Root.Culture.GetName] Coromandel Company
-TRADE_COMPANY_NORTH_INDIA_Root_Culture_GetName코0=[Root.Culture.GetName] North India Company
+TRADE_COMPANY_BURMA_Root_Culture_GetName코0={Root.Culture.GetName} Burma Company
+TRADE_COMPANY_SOUTH_INDIA_Root_Culture_GetName코0={Root.Culture.GetName} Konkan Company
+TRADE_COMPANY_DECCAN_Root_Culture_GetName코0={Root.Culture.GetName} Deccan Company
+TRADE_COMPANY_COROMANDEL_Root_Culture_GetName코0={Root.Culture.GetName} Coromandel Company
+TRADE_COMPANY_NORTH_INDIA_Root_Culture_GetName코0={Root.Culture.GetName} North India Company
