Revert "emperor update"
This reverts commit d4826ba29eb28b859ccf1208d50b20d54095a527.

--- a/en/policies_l_english.properties
+++ b/en/policies_l_english.properties
@@ -1,4 +1,4 @@
-﻿horse_artillery코0=Horse Artillery
+horse_artillery코0=Horse Artillery
 desc_horse_artillery코0=With coordination, crews can quickly unlimber and fire, and limber-up and move away. This creates a fast-moving and fast-firing artillery.
 armed_neutrality_act코0=The Armed Neutrality Act
 desc_armed_neutrality_act코0=Our merchants have a right to trade without foreign involvement and we will protect that right.
@@ -29,7 +29,7 @@ desc_for_the_glory코0=Our country is host to many pious men that show true tale
 the_espionage_act코0=The Espionage Act
 desc_the_espionage_act코0=By using the newest inventions we can stay ahead of our enemies and make our espionage even more powerful.
 diplomatic_cooperation_act코0=The Diplomatic Cooperation
-desc_diplomatic_cooperation_act코1=By intensifying cooperation with our neighbors we will have an unparalleled access to great minds to recruit for our court.
+desc_diplomatic_cooperation_act코1=By intensifying cooperation with our neighbors we will have an unparallel access to great minds to recruit for our court.
 the_banking_system코0=The Banking System
 desc_the_banking_system코0=Some of our traders have stated that they desire to establish a banking system. If we support them, it will not only benefit them, but also us.
 new_naval_tactis코0=New Naval Tactics
@@ -55,7 +55,7 @@ desc_manueline_architecture코0=This innovative style synthesizes aspects of Lat
 trade_connection_policy코0=Trade Connections Policy
 desc_trade_connection_policy코0=By using the connections of our old noble families, we can make life much easier for our merchants.
 the_colonial_nobility_act코0=The Colonial Nobility Act
-desc_the_colonial_nobility_act코0=By creating a nobility in the colonies and providing the power to hold the locals with an iron fist we'll establish a great base for manpower for our national army.
+desc_the_colonial_nobility_act코0=By creating a nobility in the colonies and providing the power to hold the locals with an ironfist we'll establish a great base for manpower for our national army.
 nobles_in_navy_act코0=Noble Naval Traditions
 desc_nobles_in_navy_act코0=Our nobles have been a vital part of our navy for quite some time now. Their old traditions and skills shall be quite valuable in the future.
 chivalry_heritage코0=Chivalry Heritage
@@ -95,7 +95,7 @@ desc_naval_secrecy_act코0=We have seen much of this strange New World. Things t
 local_army_organisation코0=Local Army Organization
 desc_local_army_organisation코0=We shall reorganize our army to make sure that our forces can fight efficiently whenever needed and wherever they are needed.
 streamlined_galley_production코0=Streamlined Galley Production
-desc_streamlined_galley_production코0=Our shipwrights tell us that much could be accomplished in terms of efficiency when it comes to the production of galleys for our navy. By streamlining and standardizing production processes and ensuring that the shipyards are never unsupplied, we will lay a solid foundation for our country as a great naval power.
+desc_streamlined_galley_production코0=Our shipwrights tell us that much could be accomplished in terms of efficiency when it comes to the production of galleys for our navy. By streamlining and standardizing production processes and ensuring that the shipyards are never unsupplied we will lay a solid foundation for our country as a great naval power.
 edict_of_resistance코0=Edict of Resistance
 desc_edict_of_resistance코0=Through our clergy we promote the idea of our nation as the one favored in war and that we should never lose faith in our right in this earth. To fight to the very last breath is the very spirit of our people.
 public_welfare_act코0=The Public Welfare Act
@@ -193,7 +193,7 @@ desc_vassal_obligations_act코0=Fix in law the precise military and economic obl
 foreign_advisors코0=Foreign Advisors
 desc_foreign_advisors코0=By opening our court to persons of all nationalities we can ensure that we get the best advice for the least cost to ourselves, as well as creating valuable diplomatic links abroad.
 vassal_integration_act코0=Vassal Integration Act
-desc_vassal_integration_act코2=Incorporating foreign lands into our country is a difficult and time-consuming affair. By setting down a series of standard practices for integration we can make it easier.
+desc_vassal_integration_act코1=By harmonizing the command structure of our subjects with our own we will be able to fight better together.
 overseas_dominions코0=Overseas Dominions
 desc_overseas_dominions코0=Ruling distant lands is difficult, particularly when those lands are an ocean away. By establishing dominions ruled by local viceroys loyal to the crown we can get the most out of those lands.
 enlightened_aristocracy코0=Enlightened Aristocracy
@@ -301,7 +301,7 @@ desc_the_mining_act코0=Apart from a mining tax all aspects of mining are handle
 hire_privateers코0=Privateers
 desc_hire_privateers코0=Privateers have been enlisted to disrupt foreign trade and attack enemy vessels.
 hold_the_weather_gauge코0=Hold the Weather Gauge
-desc_hold_the_weather_gauge코0=By assuming the advantageous position of being upwind to an enemy vessel, we get a much higher degree of maneuverability in combat.
+desc_hold_the_weather_gauge코0=By assuming the advantageous position of being upwind to an enemy vessel we get a much higher degree of manouverability in combat.
 restrictions_for_colonies코0=Colonial Restrictions
 desc_restrictions_for_colonies코0=Strict rules have been established in regards to trade and production to increase control over our colonies.
 the_anti_piracy_act코0=The Anti-Piracy Act
