--- a/en/random_new_world_l_english.properties
+++ b/en/random_new_world_l_english.properties
@@ -1,4 +1,4 @@
-﻿RNW_COLONIAL_REGION_NAME코0=Colonial $REGION$
+RNW_COLONIAL_REGION_NAME코0=Colonial $REGION$
 mount_sky코0=Mount Sky
 syphilia코0=Syphilia
 bodlund코0=Bodlunden
@@ -2259,8 +2259,8 @@ p_merigata코0=Merigata
 p_merigata_adj코0=Merigatan
 p_neheke코0=Neheke
 p_neheke_adj코0=Nehekean
-p_hinengura코0=Hinengura
-p_hinengura_adj코0=Hinenguran
+p_hinenguru코0=Hinenguru
+p_hinenguru_adj코0=Hinenguruan
 p_magaroa코0=Magaroa
 p_magaroa_adj코0=Magaroan
 p_rangihakla코0=Rangihakla
