--- a/en/religion_l_english.properties
+++ b/en/religion_l_english.properties
@@ -1,4 +1,4 @@
-﻿shiva코0=Shiva
+shiva코0=Shiva
 ganesha코0=Ganesha
 surya코0=Surya
 ganga코0=Ganga
@@ -20,9 +20,6 @@ jewish코0=Jewish
 karaite코0=Karaite
 samaritan코0=Samaritan
 OLD_NORSE코0=Old Norse
-catholic_neutral코0=Neutral in Council of Trent
-catholic_concilatory코0=Conciliatory in Council of Trent
-catholic_harsh코0=Harsh in Council of Trent
 jewish_rebels_demand코0=Convert $COUNTRYNAME$
 jewish_rebels_demand_desc코0=The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace.
 jewish_rebels_title코0=Religious
