Revert "emperor update"
This reverts commit a532eb3e4c8c5b8891be7f15080781b9339d444e.

--- a/en/musicplayer_l_english.properties
+++ b/en/musicplayer_l_english.properties
@@ -1,4 +1,4 @@
-﻿MUSICPLAYER_PREV코0=Previous
+MUSICPLAYER_PREV코0=Previous
 MUSICPLAYER_PLAY코0=Play
 MUSICPLAYER_PAUSE코0=Pause
 MUSICPLAYER_STOP코0=Stop
