--- a/en/nw_l_english.properties
+++ b/en/nw_l_english.properties
@@ -1,4 +1,4 @@
-﻿LIBERTY_DESIRE_CURRENT코0=Liberty Desire is currently: §Y$VAL$%§!
+LIBERTY_DESIRE_CURRENT코0=Liberty Desire is currently: §Y$VAL$%§!
 LIB_OUR_TARIFF코0=We pay §Y$VAL$%§! of our income in tariffs to $MOTHER$, and if the tariffs are higher than our Liberty Desire, then the Liberty Desire increases by §G+$INC$%§! each year.
 LIBERTY_DESIRE_CURRENT_DESC코0=Liberty Desire represents the colony's desire for independence. Increasing tariffs among other things will increase it over time.
 LIBERTY_DESIRE_CURRENT_LIMITS코0=Liberty Desire represents the country's desire for independence. They may turn rebellious if their Liberty Desire is over §Y$VAL$%§!
@@ -31,7 +31,6 @@ PROTECTORATE_LEAD코0=Has $LIST$ as protectorates
 PROTECTORATE_WEAK코0=Protectorate of $LIST$
 HEADER_SUBJECTS코0=Subjects
 HEADER_ESTATES코0=Estates
-HEADER_STATES코0=States
 HEADER_NATIVES코0=Natives
 HEADER_RELIGIOUS_REFORMS코0=Religious Reforms
 NO_CURR_SUBJECTS_TT코0=You do not currently have any subject nations.
@@ -55,7 +54,7 @@ merchant_republic_size코0=Large Merchant Republic
 NATIVES_CANT_FABRICATE코0=Natives cannot fabricate claims.\n
 WEST_REASON_NATIVE코0=You need to reform your government first.
 WEST_REASON_RELIGION_REFORM코0=You need to reform your religion first.
-REFORM_RELIGION_EXPL코2=Reform our religion and society by learning from §Y$WHO$§!, giving us §Y$LVL$§! technologies spread across the categories, while embracing $NUM|Y$ institutions and adopting their form of government.
+REFORM_RELIGION_EXPL코1=Reform our religion and society by learning from §Y$WHO$§!, giving us §Y$LVL$§! technologies spread across the categories, while embracing $NUM|Y$ institutions.
 REFORM_RELIGION_EXPL_DET_2코0=It is possible to reform our religion and society if we have all the religious reforms and either border a European nation OR have a total of $NEEDED|Y$ technology levels.
 REFORM_RELIGION_NO_SPONSOR_EXPL코0=Reform our religion and society by applying our technological understanding. This will change our government into a more modern type and give us institutions to help us.
 REFORM_NATIVE_EXPL코1=Reform to §Y$GOV$§! by learning from §Y$WHO$§!, giving us §Y$LVL$§! technologies spread across the categories, while embracing $NUM|Y$ institutions.
@@ -198,8 +197,8 @@ SUBECT_TOTAL_INCOME코0=Total Subject Income:
 NO_TARIFFS_COUNTRIES코0=No colonies
 SUBJECT_SORT_TRADE코0=Sort by trade power transferred
 SUBJECT_SORT_OPINION코0=Sort by subjects opinion of us
-SUBJECT_NO_COLONIES코1=We have no colonies.
-SUBJECT_NO_VASSALS코1=We have no vassals.
+SUBJECT_NO_COLONIES코0=We have no colonies
+SUBJECT_NO_VASSALS코0=We have no vassals
 WE_ARE_AT_WAR코0=We are at war
 cb_colonial_independance_war코0=Colonial Independence
 cb_colonial_independance_war_desc코0=We deserve independence.
