--- a/en/mughal_government_l_english.properties
+++ b/en/mughal_government_l_english.properties
@@ -1,4 +1,4 @@
-﻿ASSIMILATED_CULTURE_HEADER코0=$TITLE|Y$
+ASSIMILATED_CULTURE_HEADER코0=$TITLE|Y$
 ASSIMILATED_CULTURE_NO_BENEFIT코0=Assimilating this culture group gives no benefits.
 mughal_government_altaic_assimilated코0=Turkoman Gunners
 mughal_government_altaic_assimilated_desc코0=Turkoman gunners have joined our armies following our conquest of the Central Asian steppe. Our enemies will cower before the sound of our firearms!
@@ -9,7 +9,7 @@ mughal_government_british_assimilated_desc코0=If there is a defining feature of
 mughal_government_burman_assimilated코0=Burman Martial Leadership
 mughal_government_burman_assimilated_desc코0=Burman nobility are expected to study the art of war throughout their lives. Their strategic expertise will serve us well.
 mughal_government_byzantine_assimilated코0=Legacy of Rome
-mughal_government_byzantine_assimilated_desc코0=Many nations have taken up the mantle of the Roman Empire with varying degrees of perceived legitimacy. Shall we become yet another conquering people to appropriate its name?
+mughal_government_byzantine_assimilated_desc코0=Many nations have taken up the mantle of the Roman Empire with varying degrees of perceived legitimacy. Shall we become yet another conquering people to appropiate its name?
 mughal_government_carpathian_assimilated코0=The Black Legions of Carpathia
 mughal_government_carpathian_assimilated_desc코0=The rulers of Carpathia have for long relied on standing mercenary armies to protect their realms. Now with the mercenaries still present but nobody to buy their services we can press their prices down.
 mughal_government_caucasian_assimilated코0=Mamluk Slaves
@@ -19,7 +19,7 @@ mughal_government_gaelic_assimilated_desc코0=The people in the north of the Bri
 mughal_government_central_indic_assimilated코0=Jungle Warfare
 mughal_government_central_indic_assimilated_desc코0=Thick jungles and perilous weather define the central regions of India. Its native people have found a way not only to survive there, but to thrive. We shall apply their knowledge to our military so that we can keep our armies supplied even in the most difficult terrain.
 mughal_government_east_asian_assimilated코0=Confucian Bureaucracy
-mughal_government_east_asian_assimilated_desc코0=Chinese states have been guided by Confucian political philosophy for a millennia, creating efficient administrations and securing the legitimacy of the monarch. Though clearly misguided, elements of Confucian bureaucracy could be adapted for use in our own government.
+mughal_government_east_asian_assimilated_desc코0=Chinese states have been guided by Confucian political philosophy for a millenia, creating efficient administrations and securing the legitimacy of the monarch. Though clearly misguided, elements of Confucian bureaucracy could be adapted for use in our own government.
 mughal_government_kongo_group_assimilated코0=Kongolese Religious Syncretism
 mughal_government_kongo_group_assimilated_desc코0=Thanks to the Kongolese liberal view on religion the local ruling families are quite willing to provide tributes to the Mughal harem.
 mughal_government_cushitic_assimilated코0=Kingdom of Prester John
@@ -90,4 +90,3 @@ mughal_government_west_slavic_assimilated코0=Slavic Generals
 mughal_government_west_slavic_assimilated_desc코0=The west Slavs have over decades produced leaders for armies that excel in using new weaponry to their fullest with unorthodox tactics. With them subjugated we should utilize this to the fullest.
 mughal_government_western_aryan_assimilated코0=Gujarati Traders
 mughal_government_western_aryan_assimilated_desc코0=Merchants based in Gujarat travel the great expanse of the Indian Ocean seeking opportunities for profit. They have refined trade into a precise science, which will be of great use to us when we assimilate their ports.
-
