--- a/en/muslim_dlc_l_english.properties
+++ b/en/muslim_dlc_l_english.properties
@@ -1,4 +1,4 @@
-﻿muslim_dlc.EVTNAME1코0=Ramadan
+muslim_dlc.EVTNAME1코0=Ramadan
 muslim_dlc.EVTDESC1코0=Soon it is the ninth month of our calendar and Muslims worldwide are preparing for a month of fasting. It is one of the Five Pillars of Islam and is fard (obligatory) for all adult Muslims who are not ill, traveling or pregnant. From dawn until sunset no food is to be consumed, no liquids drunk, no tobacco used and no sexual relations allowed. It is a time of spiritual reflection, improvement and increased devotion and worship, no God-fearing Muslim should ignore Ramadan.
 muslim_dlc.EVTOPTA1코0=It is time to fast
 muslim_dlc.EVTOPTB1코0=Ignore it
@@ -103,8 +103,8 @@ muslim_dlc.EVTDESC24코0=Al-Birjandi is a brilliant astronomer, mathematician an
 muslim_dlc.EVTOPTA24코0=This is a man I need as an advisor!
 muslim_dlc.EVTOPTB24코0=I will support his work
 muslim_dlc.EVTOPTC24코0=Who is this? Why should I care?
-muslim_dlc.EVTNAME25코0=People of the Book - Dhimmi of [Root.GetName]
-muslim_dlc.EVTDESC25코0=The People of the Book - the Christians, the Jews and the Sabians - recognize the God of Abraham as the one and only god, as do Muslims, and they practice revealed faiths based on divine ordinances. The population of [Root.GetName] are almost all Dhimmi and while they are afforded the usual things related to this status in a Muslim realm many of them feel our state could be more forthcoming given how rich the region is. It has been suggested that we make even more favorable conditions for the Dhimmi of [Root.GetName] as it would be in our own best interest to encourage such a prosperous region to grow.
+muslim_dlc.EVTNAME25코0=People of the Book - Dhimmi of {Root.GetName}
+muslim_dlc.EVTDESC25코0=The People of the Book - the Christians, the Jews and the Sabians - recognize the God of Abraham as the one and only god, as do Muslims, and they practice revealed faiths based on divine ordinances. The population of {Root.GetName} are almost all Dhimi and while they are afforded the usual things related to this status in a Muslim realm many of them feel our state could be more forthcoming given how rich the region is. It has been suggested that we make even more favorable conditions for the Dhimi of {Root.GetName} as it would be in our own best interest to encourage such a prosperous region to grow.
 muslim_dlc.EVTOPTA25코0=Let us favor their presence here.
 muslim_dlc.EVTOPTB25코0=Convert them, remove them - erase them!
 muslim_dlc.EVTNAME26코0=Mahdi
@@ -146,7 +146,7 @@ desc_serafeddin_sabuncuoglu코0=With the benevolent ruler sponsoring Serafeddin 
 al_birjandi코0=Al-Birjandi
 desc_al_birjandi코0=Al-Birjandi, the brilliant astronomer, mathematician and physicist is being sponsored by our benevolent ruler.
 dhimmi_residence코0=Dhimmi
-desc_dhimmi_residence코0=The People of the Book - the Christians, the Jews and the Sabians - are protected under the Dhimmi, and are allowed rights of residence in return for taxes. Nowhere is this more true than in this area where we have made accommodations for the very rich Dhimmi community.
+desc_dhimmi_residence코0=The People of the Book - the Christians, the Jews and the Sabians - are protected under the Dhimmi, and are allowed rights of residence in return for taxes. Nowhere is this more true than in this area where we have made accommodations for the very rich Dhimi community.
 true_mahdi코0=True Mahdi
 desc_true_mahdi코0=The Mahdi has come, the prophesied redeemer of Islam. He will rule for seven years before the Day of Judgment, ridding the world of evil and re-establishing righteousness.
 invited_eid_al_fitr코0=Invited to Eid al-Fitr
