Revert "emperor update"
This reverts commit da9894b7f67a2b93db58820b81a7665042fc4d6c.

--- a/en/ledger_l_english.properties
+++ b/en/ledger_l_english.properties
@@ -1,4 +1,4 @@
-﻿LEDGER_COUNTRY코0=Country
+LEDGER_COUNTRY코0=Country
 LEDGER_STABILITY코0=Stability
 LEDGER_INCOME코0=Income
 LEDGER_INCOMING코0=Incoming
@@ -208,6 +208,6 @@ LEDGER_GOVERNMENT코1=Governments
 LEDGER_GOVERNMENT_TYPE코0=Government Type
 LEDGER_GOVERNMENT_NAME코0=Government Name
 LEDGER_GOVERNMENT_LEGITIMACY코0=Legitimacy
-LEDGER_GOVERNMENT_CORRUPTION코0=Corruption
+LEDGER_GOVERNMENT_ADMIN_EFF코0=Administrative Efficiency
 LEDGER_GOVERNMENT_ABSOLUTISM코0=Absolutism
 LEDGER_GOVERNMENT_MAX_ABSOLUTISM코0=Max Absolutism
