--- a/en/kairismusicp2_l_english.properties
+++ b/en/kairismusicp2_l_english.properties
@@ -1,4 +1,4 @@
-﻿Eastern_Fronts코0=Eastern Fronts
+Eastern_Fronts코0=Eastern Fronts
 Peace_For_Generations코0=Peace for Generations
 Temple_Ambitions코0=Temple Ambitions
 The_Grasslands_Call코0=The Grasslands Call
