Revert "emperor update"
This reverts commit 2b002b9870f94d517e57e9583fc08ae7784bbd4b.

--- a/en/diplomacy_l_english.properties
+++ b/en/diplomacy_l_english.properties
@@ -1,4 +1,4 @@
-﻿rival코0=Rival
+rival코0=Rival
 allied_to_rival코0=Allied to Rival
 enemy_of_my_enemy코0=Enemy of Enemy
 subsidizing_our_armies코0=They subsidize our armies
@@ -79,20 +79,17 @@ WE_NO_SHIP_CAPACITY_NO_BASE코0=We have no shipbuilding capacity so cannot be us
 NO_INTEGREATION_PROGRESS_AT_WAR코0=Both countries need to be at peace for an integration to progress.
 NO_ANNEX_PROGRESS_AT_WAR코0=Both countries need to be at peace for an annexation to progress.
 NO_ANNEX_PROGRESS_WHILE_CAPITAL_TAKEN코0=Annexation will not progress while they don't control their capital.
-NO_ANNEX_PROGRESS_LIBERTY코0=They must have less than §Y$LIMIT$§! Liberty desire for annexation to progress, but currently have their liberty desire is §R$AMOUNT$§!.\n
+NO_ANNEX_PROGRESS_LIBERTY코0=They must have less than §Y$LIMIT$§! Liberty desire for annexation to progress, but currently have §R$AMOUNT$§!.
 ALL_CORES_AND_CLAIMS코0=All Core and Claim Provinces
-RIVAL_BENEFITS코1=§Y$WHO$§! is our Rival, and against them we have the following benefits:\n
+RIVAL_BENEFITS코0=§Y$WHO$§! is our Rival, and against them we have the following benefits.\n
 RIVAL_DIPLO_ALLY코0=- More likely to get alliances with their enemies.\n
-RIVAL_BENEFITS_NONE코1=Against a rival we have the following benefits:\n
+RIVAL_BENEFITS_NONE코0=Against a rival we have the following benefits.\n
 RIVAL_BENEFITS_TRADE코0=- No Trade Efficiency penalty when embargoing.\n
 RIVAL_PRESTIGE코0=$VAL$ prestige from defeating them in battles.\n
 RIVAL_DIP_POWER코0=$VAL$£dip  cost for demanding provinces from them in a peace deal.\n
 RIVAL_SPY코0=$VAL$ Spy Network Construction against them.\n
-BENEFIT_FOR_EMPEROR코1=Emperor gets:\n$MODIFIER$
-BENEFIT_FOR_EMPEROR_PER_PRINCE코1=Emperor gets (depends on number of princes):\n$MODIFIER$
-BENEFIT_FOR_ELECTOR_PER_PRINCE코1=Electors get (depends on number of princes):\n$MODIFIER$
-BENEFIT_FOR_MEMBER코2=Princes & Free Cities get:\n$MODIFIER$
-BENEFIT_FOR_EVERYONE코1=All in the Empire get:\n$MODIFIER$
+BENEFIT_FOR_EMPEROR코0=Emperor gets
+BENEFIT_FOR_MEMBER코0=Members get
 DIPIRO_SUPPORTING_INDEPENDENCE코0=Supporting the Independence of §Y$NAME$§!.
 DIPIRO_INDEPENDENCE_SUPPORTED코0=Independence Supported by §Y$NAME$§!.
 DIPIRO_ALLIED_WITH코0=Allied with §Y$NAME$§!.
@@ -564,7 +561,7 @@ DEMAND_PEACE코0=Demand Tribute
 OFFER_WP코0=Offer White Peace
 OFFER_PEACE코0=Offer Tribute
 BACK코0=Back
-BUILDSPYNETWORK_DISCOV코1=Since our spies have been discovered, we cannot send spies again until $WHEN|Y$.
+BUILDSPYNETWORK_DISCOV코0=Since our spies have been discovered, we can not send spies again until $WHEN|Y$.
 SPYNETWORK_DIPLO코0=Our $ADJ|Y$ Spy Network is currently at size $SIZE|Y$ out of a maximum of §Y100§!.
 SPYNETWORK_BENEFITS코0=This gives us the following benefits:
 SPYNETWORK_BENEFITS_SIEGE코0=  $AMT$ Siege Ability against $WHO|Y$
@@ -662,7 +659,6 @@ FULL_ALLY_CHECKBOX_WILL_AUTOJOIN코1=The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! w
 FULL_ALLY_CHECKBOX_WILL_CALL코1=The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! will be considered a co-belligerent in this war. They will be able to call their own allies.
 FULL_ALLY_CHECKBOX_WILL_NOT_CALL코1=The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! will NOT be considered a co-belligerent in this war. They will NOT be able to call their own allies, but it will be twice as expensive to take their provinces.
 FULL_ALLY_CHECKBOX_DESC코1=§GClick to change whether or not to consider this enemy $SUBJECTORALLY$ a co-belligerent.§!
-ENEMY_STRENGTH_UNACCOUNTED코0=We will not have any information about the army strength of any of those nations that may be called in.
 NOT_COBELLIGERENT_CALL코0=We would join as a regular ally. It will be twice as expensive for the enemy to take our provinces, but we will NOT be able to call our own allies.
 COBELLIGERENT_CALL코0=We would join as co-belligerent and will be able to call our own allies.
 CALL_PROMISE_LAND코0=§GIf we accept, they promise us territorial gains from this war.§!
@@ -711,7 +707,7 @@ POWER_COST_OPINION코0=$COUNTRY01|Y$ opinion about $COUNTRY02|Y$:
 WAR_SCORE_COST코0=War Score cost: $VAL|Y$\n
 POWER_COST_NOT_IN_WARGOAL코1=Not in war goal cost: $VAL|Y$£dip \n
 POWER_COST_RIVAL코0=Taking from rival: $VAL$\n
-VASSAL_CANCEL_CONFIRM코0=Do you wish to cancel our vassalization with $VASSAL|Y$?
+VASSAL_CANCEL_CONFIRM코0=Do you wish to cancel our vassalisation with $VASSAL|Y$?
 VASSAL_CANCEL_PRESTIGE코0=\nThis will cost us $PRESTIGE|R$ Prestige.
 VASSAL_CANCEL_OPINION코0=\nBecause they are loyal, their opinion of us will decrease by $OPINION|R$.
 VASSAL_CANCEL_CORES코0=\nWe will also lose any cores and claims we have on their provinces.
