--- a/en/achievement_tooltips_l_english.properties
+++ b/en/achievement_tooltips_l_english.properties
@@ -1,4 +1,4 @@
-﻿achievement_for_the_glory_tooltip코0=Have diplomatically annexed a vassal.
+achievement_for_the_glory_tooltip코0=Have diplomatically annexed a vassal.
 achievement_that_is_mine_tooltip코0=Have conquered one new province.
 achievement_victorious_tooltip코0=Has won one war.
 achievement_seriously_tooltip코0=Have killed 10 000 men in one battle.
@@ -33,8 +33,8 @@ atleast_10_mahayana_tooltip코0=At least 10 countries must follow the Mahayana f
 achievement_sakoku_law_tooltip코0=Go Full Isolationist in at least 6 Incidents.
 achievement_live_long_and_prosper_tooltip코0=At least 30 States must be Prosperous.
 general_with_steam_name_won_battle_tt코0=General with Player's Steam Name won battle.
-propagated_in_five_moluccan_provinces코0=[Root.GetName] Propagated Religion in 5 provinces in the §YMollucas§! Trade Node.
-achievement_david_the_builder_tooltip코0=[Root.GetName] has no open building slots in any of their provinces.
+propagated_in_five_moluccan_provinces코0={Root.GetName} Propagated Religion in 5 provinces in the §YMollucas§! Trade Node.
+achievement_david_the_builder_tooltip코0={Root.GetName} has no open building slots in any of their provinces.
 all_coffee_owned_by_you코0=No §YCoffee§! provinces in Asia, Europe, Africa or Oceania are owned by European Countries.
 chop_chop.tooltip코0=Had §Y6§! separate consorts with only one Monarch.
 anglophile.tooltip코0=Completed all English and British missions.
@@ -50,7 +50,4 @@ completed_spanish_missions코0=Completed all Spanish missions.
 discovered_random_new_world코0=Discovered the entire New World.
 captured_a_flagship코0=Has captured an enemy Flagship.
 expelled_5_different_minorities_tooltip코0=Has expelled 5 different minorities.
-spanish_fly_tooltip코0=Any country with a capital in the Iberia region is a Junior Partner of [Root.GetName].
-spread_revolution_ten_times_tt코0=Spread the Revolution ten times
-kingdom_of_god_achievement_tt코0=Is the Kingdom of God
-completed_austrian_missions코0=Complete the Austrian mission tree
+spanish_fly_tooltip코0=Any country with a capital in the Iberia region is a Junior Partner of {Root.GetName}.
