--- a/en/tutorial_l_english.properties
+++ b/en/tutorial_l_english.properties
@@ -1,4 +1,4 @@
-﻿TUT_PART_BAS_SHORT코0=Basic Tutorial
+TUT_PART_BAS_SHORT코0=Basic Tutorial
 TUT_PART_BAS_TITLE코0=§YBasic Tutorial§!\nBasic Controls\nBasic Gameplay
 TUT_PART_BAS_DESC코0=This part of the tutorial will go through the basics of how to control the camera, game speed, controlling units, production and basic diplomacy.
 TUT_PART_ADV_SHORT코0=Advanced Tutorial
@@ -223,7 +223,7 @@ TUT_ADV_CHAPTER03_PAGE01_TITLE코0=§YTrade (1/11)§!
 TUT_ADV_CHAPTER03_PAGE01_TEXT코0=Trade is an important part of Europa Universalis IV. The world is divided up in different §MTrade Nodes§! with each having a different number of provinces in them. Provinces produce different §Mtrade goods§! and the §MTrade Value§! of those goods is transported to their respective Trade Nodes. Trade Nodes are visible on the map as either floating buoys or cities and they have light blue stripes connecting each other.
 TUT_ADV_CHAPTER03_PAGE01_OBJECTIVES코0=Click §MVenezia§! to continue.
 TUT_ADV_CHAPTER03_PAGE02_TITLE코0=§YProvince Trade Power (2/11)§!
-TUT_ADV_CHAPTER03_PAGE02_TEXT코2=A good portion of the Trade Power in a Trade Node comes from provinces and can be improved by building §Mtrade buildings§!. Certain provinces are §MCenters of Trade§! or they have a §MRiver Estuary§!. Both of these give a bonus to Trade Power. Your capital province, Venezia, is an example of a province that is a Center of Trade!
+TUT_ADV_CHAPTER03_PAGE02_TEXT코0=A good portion of the Trade Power in a Trade Node comes from provinces and can be improved by building §Mtrade buildings§!. Certain provinces are §MImportant Centers of Trade§! or they have a §MRiver Estuary§!. Both of these give a bonus to Trade Power. Your capital province, Venezia, is an example of a province that is an Important Center of Trade and has a River Estuary.
 TUT_ADV_CHAPTER03_PAGE02_OBJECTIVES코0=Click the §MVenice§! button to continue.
 TUT_ADV_CHAPTER03_PAGE03_TITLE코0=§YTrade Node (3/11)§!
 TUT_ADV_CHAPTER03_PAGE03_TEXT코0=The §MTrade Value§! in a Trade Node comes from the §Mprovinces§! that trade there. You can either §Mcollect income§! from the Trade Value or §Msteer the trade§! to the next Trade Node. §MTrade Power§! is a very important value that determines how much of the trade in a Trade Node you control. The more trade you control the more income you can collect or the more Trade Value you can transport forwards.
@@ -274,7 +274,7 @@ TUT_CAM_CHAPTER01_PAGE06_TITLE코0=§YDefeat Granada (6/8)§!
 TUT_CAM_CHAPTER01_PAGE06_TEXT코0=The results of the war will be recorded and are presented as §MWar Score§!. War Score is gained by occupying enemy provinces and by winning land or naval battles. If an enemy occupies your provinces or defeats you in battle, you will instead lose War Score. War Score decides what can be demanded in a §MPeace Offer§!.\n\n§YRemember to unpause the game.§!
 TUT_CAM_CHAPTER01_PAGE06_OBJECTIVES코0=Have a §MWar Score§! of 100% to continue.
 TUT_CAM_CHAPTER01_PAGE07_TITLE코0=§YAnnex Granada (7/8)§!
-TUT_CAM_CHAPTER01_PAGE07_TEXT코1=Granada is defeated! Annex them to finish the reconquest of Spain.\n\n§YRight-click the §Mwar overview§Y shield at the bottom-right. Select one of their provinces to demand their annexation and then click §MSend Demand§!. Remember to unpause the game.§W
+TUT_CAM_CHAPTER01_PAGE07_TEXT코0=Granada is defeated! Annex them to finish the reconquest of Spain.\n\n§YRight-click the §Mwar overview§Y shield at the bottom-right. Select their only province to demand their annexation and then click §MSend Demand§!. Remember to unpause the game.§W
 TUT_CAM_CHAPTER01_PAGE07_OBJECTIVES코1=Demand Granada's last Province to continue.
 TUT_CAM_CHAPTER01_PAGE08_TITLE코0=§YEnd of Chapter (8/8)§!
 TUT_CAM_CHAPTER01_PAGE08_TEXT코0=This concludes the Reconquista Chapter of the Spanish Empire Campaign.
