--- a/en/government_l_english.properties
+++ b/en/government_l_english.properties
@@ -1,4 +1,4 @@
-﻿native코0=Native American Tribe
+native코0=Native American Tribe
 native_desc코0=This is a native American tribe. It is ruled by a tribal council under the leadership of a chief.
 native_basic_reform코0=Native Council
 native_basic_reform_name코0=Native Council
@@ -12,7 +12,7 @@ feudalism_reform_desc코0=In a Feudal kingdom the power of the Monarch is enhanc
 autocracy_reform코0=Autocracy
 autocracy_reform_desc코0=Autocratic monarchies concentrate power in the hands of the ruler. The state is often seen as their personal property. It is not uncommon for rulers to have ministers and supporters, but these are then referred to as members of the royal household.
 plutocratic_reform코0=Plutocracy
-plutocratic_reform_desc코0=A plutocratic kingdom is one where the supporters of the Monarch are those with the largest incomes. The monarch is often the head of a successful merchant enterprise, and so are many of their supporters.
+plutocratic_reform_desc코0=A plutocratic kingdom is one where the supporters of the Monarch are those with the largest incomes. The monarch themself is often the head of a successful merchant enterprise, and so are many of their supporters.
 enforce_trader_privileges_reform코0=Enforce Trader Privileges
 enforce_trader_privileges_reform_desc코0=By strengthening the ties between the state and successful merchant enterprises, we can increase our reach out into the world as well as the profit we bring home.
 indian_sultanate_reform코0=Indian Sultanate
@@ -242,7 +242,7 @@ ability_tribal_federation_mechanic코0=Tribal Federation
 mechanic_foreign_slave_rulers_yes코0=Enables Foreign Slave Rulers.
 mechanic_foreign_slave_rulers_no코0=Disables Foreign Slave Rulers.
 mechanic_claim_states_yes코0=Can claim entire states.
-mechanic_claim_states_no코1=Cannot claim entire states.
+mechanic_claim_states_no코0=Can not claim entire states.
 mechanic_religion_yes코0=Is a Theocracy.
 mechanic_religion_no코0=Is not a Theocracy.
 mechanic_republic_yes코0=Is a Republic.
@@ -267,7 +267,7 @@ mechanic_has_pashas_yes코1=Can place Pashas & recruit Janissaries.
 mechanic_boost_income_yes코0=Enables Merchant Republic Mechanics.
 mechanic_boost_income_no코0=Disables Merchant Republic Mechanics.
 mechanic_can_use_trade_post_yes코0=Can place Trade Posts.
-mechanic_can_use_trade_post_no코1=Cannot place Trade Posts.
+mechanic_can_use_trade_post_no코0=Can not place Trade Posts.
 mechanic_can_form_trade_league_yes코0=Can form Trade Leagues.
 mechanic_can_form_trade_league_no코0=Can't form Trade Leagues.
 mechanic_trade_city_reform코0=Can create $VALUE$.
@@ -295,7 +295,7 @@ monarchy_mechanic코0=Monarchy
 republic_mechanic코0=Republic
 theocracy_mechanic코0=Theocracy
 mechanic_allow_migration_yes코0=Allows migration
-mechanic_native_mechanic_no코0= " # intentionally empty
+mechanic_native_mechanic_no코0= 
 mechanic_native_mechanic_yes코0=Uses Native Mechanic.
 mechanic_different_religion_acceptance코0=Different Religion acceptance: $VALUE|R$
 mechanic_different_religion_group_acceptance코0=Different Religion Group acceptance: $VALUE|R$
@@ -304,18 +304,18 @@ permanent_marathas_council_reform코0=Permanent Marathas Council
 permanent_marathas_council_reform_desc코0=Maratha generals and civic leaders are an important part of the balance of power in our nation. We should formalize their assemblies and establish a permanent council of the Marathas to guide our nation.
 governmental_purbias_register_reform코0=Governmental Purbias Register
 governmental_purbias_register_reform_desc코0=The state is taking measures to attract elite Rajput warriors from all over India. Steps should be taken to organize these warriors into cohesive regiments upon arrival so that they can be deployed more effectively.
-mechanic_maratha_general_interaction_yes코1=Enables the Marathas Estate Privilege §YMaratha Military Leadership§!, which grants a maximum of §G+10%§! discipline and §R-15%§! tax income, scaled by Maratha land ownership.
-mechanic_maratha_general_interaction_no코0= " # intentionally empty
-mechanic_better_purbias_interaction_yes코0=The Rajputs Estate Privilege §YEnlist Purbias§! will give an additional §G5%§! discipline to Rajput Regiments.
-mechanic_better_purbias_interaction_no코0= " # intentionally empty
+mechanic_maratha_general_interaction_yes코0=The Marathas Estate Interaction §YRecruit Minister§! will instead recruit a General with §G1§! additional Shock.
+mechanic_maratha_general_interaction_no코0= 
+mechanic_better_purbias_interaction_yes코0=The Rajputs Estate Interaction §YEnlist Purbias§! will give an additional §G5%§! discipline to Rajput Regiments.
+mechanic_better_purbias_interaction_no코0= 
 venice_merchants_reform코0=Venetian Government
 venice_merchants_reform_desc코0=The Most Serene Republic of Venice employs a complex and convoluted system for electing officials to public office. A series of secret ballots appoints 41 electors, who then each cast a vote into an urn. A single vote is extracted from the urn, and the man whose name is written on it becomes the new Doge. The system attempts to combat electoral corruption and ensure a fair vote.
 mechanic_lottery_election_yes코0=Election by Lottery.
-mechanic_lottery_election_no코0= " # intentionally empty
+mechanic_lottery_election_no코0= 
 mechanic_election_on_death_yes코0=Elections only occur when ruler dies.
-mechanic_election_on_death_no코0= " # intentionally empty
+mechanic_election_on_death_no코0= 
 mechanic_is_merchant_republic_yes코0=Is a Merchant Republic
-mechanic_is_merchant_republic_no코0= " # intentionally empty
+mechanic_is_merchant_republic_no코0= 
 lottery_reform코0=Sortition
 lottery_reform_desc코0=Elections by majority votes are prone to corruption or worse, populism. We shall employ a complex system of allotment to determine who should lead our Republic by selecting almost at random from among a pool of suitable candidates.
 appointment_by_committee_reform코0=Appointment by Committee
@@ -323,10 +323,9 @@ appointment_by_committee_reform_desc코0=Let us abandon arbitrary appointments t
 bureaucratic_aparatus_reform코0=Bureaucratic Aparatus
 bureaucratic_aparatus_reform_desc코0=The bureaucracy is expanding to meet the needs of the expanding bureaucracy.
 great_mongol_state_legacy코0=Great Mongol State
-great_mongol_state_legacy_desc코0=The Mongol Empire of Genghis Khan has been restored under our leadership. We are rebuilding the systems of government established by the Great Khan while avoiding the mistakes of his unworthy successors.
+great_mongol_state_legacy_desc코0=The Mongol Empire of Genghis Khan has been restored under our leadership. We are rebuilding the systems of government established by the Greaat Khan while avoiding the mistakes of his unworthy successors.
 great_mongol_state_reform코0=Great Mongol State
-great_mongol_state_reform_desc코0=The Mongol Empire of Genghis Khan has been restored under our leadership. We are rebuilding the systems of government established by the Great Khan while avoiding the mistakes of his unworthy successors.
+great_mongol_state_reform_desc코0=The Mongol Empire of Genghis Khan has been restored under our leadership. We are rebuilding the systems of government established by the Greaat Khan while avoiding the mistakes of his unworthy successors.
 mechanic_has_term_election_yes코0=
 mechanic_has_term_election_no코0=
 NEEDS_REGULAR_ELECTIONS코0=Ruler must not rule for life.
-
