--- a/en/core_l_english.properties
+++ b/en/core_l_english.properties
@@ -919,14 +919,14 @@ MSGRDK_UGC_MULTIPLAYER_UNAVAILABLE코0=Blocked due to lack of User Generated Con
 CHAT_ERROR_MUTE_MISSINGARGS코0=Invalid syntax, expected: /mute <username>
 CHAT_ERROR_UNMUTE_MISSINGARGS코0=Invalid syntax, expected: /unmute <username>
 CHAT_ERROR_MUTEUNMUTE_SELF코0=You cannot mute or unmute yourself!
-SETTINGS_ACCESSIBILITY:=Accessibility
-SETTINGS_ACCESSIBILITY_TTS:=Multiplayer Chat Text To Speech
-SETTINGS_ACCESSIBILITY_STT:=Multiplayer Chat Speech To Text
-SETTINGS_ACCESSIBILITY_VISUAL_ALERTS:=Multiplayer Chat Visual Alerts
-SETTINGS_ACCESSIBILITY_USE_STT_SHORTCUT:=Speech To Text Toggle Shortcut
-SETTINGS_ACCESSIBILITY_CHAT_LARGE_FONTS:=Multiplayer Chat Large Fonts
-SETTINGS_ACCESSIBILITY_STT_SHORTCUT_INPUT:=Multiplayer Chat Speech To Text Shortcut
-CHAT_CVAA_MESSAGE:=$NAME$ says $MESSAGE$
-CHAT_CVAA_SYSTEM_NAME:=System
-CHAT_CVAA_EMPTY_TEXT:= 
-CHAT_CVAA_MIC:=Mic
+SETTINGS_ACCESSIBILITY코0=Accessibility
+SETTINGS_ACCESSIBILITY_TTS코0=Multiplayer Chat Text To Speech
+SETTINGS_ACCESSIBILITY_STT코0=Multiplayer Chat Speech To Text
+SETTINGS_ACCESSIBILITY_VISUAL_ALERTS코0=Multiplayer Chat Visual Alerts
+SETTINGS_ACCESSIBILITY_USE_STT_SHORTCUT코0=Speech To Text Toggle Shortcut
+SETTINGS_ACCESSIBILITY_CHAT_LARGE_FONTS코0=Multiplayer Chat Large Fonts
+SETTINGS_ACCESSIBILITY_STT_SHORTCUT_INPUT코0=Multiplayer Chat Speech To Text Shortcut
+CHAT_CVAA_MESSAGE코0=$NAME$ says $MESSAGE$
+CHAT_CVAA_SYSTEM_NAME코0=System
+CHAT_CVAA_EMPTY_TEXT코0= 
+CHAT_CVAA_MIC코0=Mic
