--- a/en/nw2_l_english.properties
+++ b/en/nw2_l_english.properties
@@ -131,6 +131,7 @@ religious_events.20.t코0=[Root.GetName] Converts to Buddhism
 religious_events.20.d코0=Eastern communities in our country rejoice as they learn of our intention to make their religion our own. All those monks and scholars sent to the court in [Root.Capital.GetName] have finally paid off.
 religious_events.20.a코0=We will henceforth follow the Pali Cannons.
 religious_events.20.b코0=We must invite a Lama to [Root.Capital.GetCapitalName] as soon as possible.
+religious_events.20.b2코0=We should study the Mahayana sutras.
 religious_events.20.c코0=Through careful study of the classics we shall find a better way.
 religious_events.20.dd코0=We must strive to understand the way of the Kami.
 religious_events.21.t코0=Conversion of [Root.GetName]
