--- a/en/text_l_english.properties
+++ b/en/text_l_english.properties
@@ -2775,7 +2775,7 @@ notechgroup코0=No Technology Group
 culture_ideas코0=Culture Ideas
 neighbor_bonus코0=Neighbor Bonus
 PLAY코0=PLAY
-DOMESTIC_NATION코0=nation
+DOMESTIC_NATION코0=Nation
 DOMESTIC_RELATION코0=relation
 LOST_PLR코0=Lost Player
 SAVE_LOADED코0=Save Game Loaded...
