--- a/en/EU4_l_english.properties
+++ b/en/EU4_l_english.properties
@@ -222,7 +222,7 @@ obj_humiliate_rival코0=Humiliate Rival
 obj_humiliate_rival_desc코0=Humiliate a rival through a peace treaty.
 obj_humiliate_rival_tooltip코0=Humiliated a Rival
 obj_christian_convert코0=Join the Reformation
-obj_christian_convert_desc코1=Change state religion to Protestant, Reformed, or Anglican religion.
+obj_christian_convert_desc코2=Change state religion to Protestant, Reformed, Anglican, or Hussite religion.
 obj_humanism_religious코0=Humanist or Religious
 obj_humanism_religious_desc코0=Fully embrace either the Humanism or Religious idea group.
 obj_convert_10_provinces코0=Convert Provinces
