--- a/en/emperor_content_l_english.properties
+++ b/en/emperor_content_l_english.properties
@@ -965,7 +965,7 @@ opinion_emperor_imperial_embargo코0=Issued Imperial Embargo
 IMPERIAL_EMBARGO코0=Imperial Embargo
 may_join_hansa_tt코0=§YWill be asked to join a renewed Hanseatic League§!
 # Shadow Kingdom
-shadow_kingdom_warning_tt코0=§YThe Emperor can rein in Italian states by defeating them in any war, or by securing an alliance or strong relations with them.§!
+shadow_kingdom_warning_tt코1=§YThe Emperor can rein in Italian states by defeating them in any war, making them a Free City, or by securing an alliance or strong relations with them.§!
 shadow_kingdom.2.d코1=While the Kingdom of Italy is still formally part of the Holy Roman Empire it has in many ways turned into a 'Shadow Kingdom', with the Italian states acting independently of the Emperor. The failure of successive Emperors to restore Imperial authority in the region has also left large areas under the control of states that outright reject Imperial Authority.\nBy now the question for many Italian states is why they should allow the Emperor any authority over their lands.
 shadow_kingdom.2.a코0=It is time to abandon Italy.
 shadow_kingdom.2.b코0=We must rein in the Italians.
