--- a/en/emperor_l_english.properties
+++ b/en/emperor_l_english.properties
@@ -363,8 +363,8 @@ COUNCIL_CONCILATORY_TITLE코0=Support Conciliatory Measures
 COUNCIL_CONCILATORY_DESC코0=Do you want to be on the conciliatory side in the Council of Trent? You can not change your stance until you get a new ruler. This have the following effects:\n$IMPACT$
 COUNCIL_CONCESSION_NOT코2=§RYou are not the papal controller!§!\nOnly the Papal Controller can spend the Curia Coffers on new Measures in the Council of Trent. The cost depends on how many cardinals support each side.
 COUNCIL_CONCESSION_ALREADY코0=§RYou have already taken the oppposite stance!§!
-COUNCIL_CONCESSION_NOT_AFFORD코1=§RThe Curia lacks the fund for this concession.§!\n It would cost $COST$¤! due to:\n $WHY$
-COUNCIL_CONCESSION_CAN_AFFORD코1=This concession would cost the curia $COST$¤! due to:\n $WHY$
+COUNCIL_CONCESSION_NOT_AFFORD코1=§RThe Curia lacks the fund for this concession.§!\n It would cost $COST$¤ due to:\n $WHY$
+COUNCIL_CONCESSION_CAN_AFFORD코1=This concession would cost the curia $COST$¤ due to:\n $WHY$
 CARDINAL_OF_X_REDUCE코0=\n$PERC|2%Y$ of Cardinals are $WHAT$: §G-$VAL|2$§!¤
 COUNCIL_CONCESSION_C_TITLE코1=Adopt Concession
 COUNCIL_CONCESSION_C_DESC코2=Adopting $NAME$ will cost $COST|Y$¤ and have the following benefits:\n$IMPACT$
@@ -1033,3 +1033,7 @@ RESET_SHORTCUTS코0=Reset Keyboard Shortcuts
 RESET_SHORTCUTS_TOOLTIP코0=Reset customized shortcuts to their default values.
 CONFIRM_RESET_SHORTCUTS코0=Are you sure you want to reset all customized shortcuts to their default values? (Requires restart.)
 REVOLUTIONARY코0=Revolutionary
+mechanic_revolutionary_client_state_yes코0=Can create Revolutionary Client States
+emperor_landfriede코0=Ewiger Landfriede
+ESTATE_NOT_ENOUGH_CROWNLAND코0=Not enough Crownland
+EXPAND_EMPIRE_CB코0=Gives casus-belli on non-members bordering the Empire to force them to join the Empire.
