--- a/en/emperor_missions_l_english.properties
+++ b/en/emperor_missions_l_english.properties
@@ -364,7 +364,7 @@ emp_hab_austrian_netherlands_title코0=Austrian Netherlands
 emp_hab_austrian_netherlands_desc코0=The Dutch lands are home to many prosperous cities. If we can make them our own, we will be able to give our treasury a significant boost - and put us in a position to entertain ambitions of an overseas empire.
 emp_hab_ostend_company_title코0=The Ostend Company
 emp_hab_ostend_company_desc코0=Other European powers have become fabulously rich via their trading companies in the colonies. Now that we control the Netherlands, we should seek to get in on the act.
-emp_hab_ostend_company_effect_tooltip코0=§YAustria§! gains a permanent claim on all coastal level 2 and higher Centers of Trade in §YIndia§!.\n§YAustria§! gains a claim on all coastal level 1 Centers of Trade in §YIndia§!.
+emp_hab_ostend_company_effect_tooltip코1=§YAustria§! gains a permanent claim on all coastal level 1 and higher Centers of Trade in §YIndia§! and the §YEast Indies§!.
 emp_hab_ostend_company_trigger_tooltip코0=Have at least §Y1§! Trade Company.
 emp_hab_indian_trading_title코0=Holdings in India
 emp_hab_indian_trading_desc코0=Our colonial empire will not be complete until it includes substantial holdings in India and the East Indies.
