--- a/en/emperor_estates_l_english.properties
+++ b/en/emperor_estates_l_english.properties
@@ -1272,3 +1272,4 @@ PRIVILEGE_LANDSHARE_CHANGE코0=We will $DIR$ $VAL|Y0$ crown land.
 PRIVILEGE_NO_CHANGE코0=This privilege does not affect $WHAT|Y$.
 CROWNLAND코0=Crown Land
 seize_land_rebels_tt코0=Rebels may rise up if any Estate drops below §R30§! loyalty
+no_other_mil_privilege코0=Has no other Estate Privilege that grants §YMonthly Military Power§!
