--- a/en/emperor_content_l_english.properties
+++ b/en/emperor_content_l_english.properties
@@ -3368,4 +3368,4 @@ same_govt_as_root_tt코0=Has the same government type as [Root.GetName]
 imperial_ban_fallback_tt코0=Every core province is owned by §Y[Root.GetName]§!.
 EST_VAL_HEATHEN_PEACE_LOYALTY코0=Not at War with Heathens: §G$VAL$§!
 emperor_trying_to_avert_shadow_kingdom_tt코0=The Emperor has formally decided to rein in Italy
-
+opinion_left_hre코0=Left the Empire
