--- a/en/text_l_english.properties
+++ b/en/text_l_english.properties
@@ -4502,7 +4502,7 @@ UW_UNITS_ATTACHED코0=The following units are attached.
 UW_ATTACH_TO코0=Attach to always follow $NAME$.
 UW_DETACH_FROM코0=Detach from following $NAME$.
 UNIT_DETACH코0=§YDetach§!
-UNIT_ATTACH코0=§YAttach§!
+UNIT_ATTACH코1=§YAttach§!\nHold §YShift§! to attach to any available unit on same province.
 DIPRELCH_STRAINED_UNION코0=Cultural differences in Union
 ottoman_eastern_carabinier코0=Eastern Carabinier
 ottoman_eastern_carabinierDESCR코0=In essence a mounted foot soldier carrying a short musket or rifle also known as a carbine. Their ability to dismount and fight on foot allowed them great flexibility in the battle.
