--- a/en/achievements_l_english.properties
+++ b/en/achievements_l_english.properties
@@ -77,7 +77,7 @@ NEW_ACHIEVEMENT_6_7_DESC코0=As Byzantium, restore the Roman Empire.
 NEW_ACHIEVEMENT_6_8_NAME코0=Agressive Expander
 NEW_ACHIEVEMENT_6_8_DESC코0=Own 200 provinces.
 NEW_ACHIEVEMENT_6_9_NAME코0=A Kaiser not just in name
-NEW_ACHIEVEMENT_6_9_DESC코0=Enact all reforms in the Holy Roman Empire.
+NEW_ACHIEVEMENT_6_9_DESC코1=Form the Holy Roman Empire.
 NEW_ACHIEVEMENT_6_10_NAME코0=Norwegian Wood
 NEW_ACHIEVEMENT_6_10_DESC코0=Own or have a subject own all naval supplies provinces as Norway.
 NEW_ACHIEVEMENT_6_11_NAME코0=African Power
@@ -411,7 +411,7 @@ NEW_ACHIEVEMENT_11_15_DESC코0=As Aragon conquer all Mediterranean Centers of Tr
 NEW_ACHIEVEMENT_11_16_NAME코0=Live Long and Prosper
 NEW_ACHIEVEMENT_11_16_DESC코0=Have 30 states with prosperity at the same time as you have a 70 year old ruler.
 NEW_ACHIEVEMENT_11_17_NAME코0=Tear Down This Wall
-NEW_ACHIEVEMENT_11_17_DESC코0=Use artillery Barrage on Berlin.
+NEW_ACHIEVEMENT_11_17_DESC코1=Use Artillery Barrage on Berlin.
 NEW_ACHIEVEMENT_11_18_NAME코0=A Golden Empire
 NEW_ACHIEVEMENT_11_18_DESC코0=Enact a Golden Age as an Empire.
 NEW_ACHIEVEMENT_11_19_NAME코0=Cherrypicking
