--- a/en/emperor_l_english.properties
+++ b/en/emperor_l_english.properties
@@ -1037,3 +1037,6 @@ mechanic_revolutionary_client_state_yes코0=Can create Revolutionary Client Stat
 emperor_landfriede코0=Ewiger Landfriede
 ESTATE_NOT_ENOUGH_CROWNLAND코0=Not enough Crownland
 EXPAND_EMPIRE_CB코0=Gives casus-belli on non-members bordering the Empire to force them to join the Empire.
+force_peasant_republic_desc코0=[From.GetName] will become a peasant republic.
+CB_ALLOWED_force_peasant_republic코0=Enforce Peasant Rule
+PEACE_force_peasant_republic코0=Enforce Peasant Rule
