Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/emperor_content_l_english.properties
+++ b/ko/emperor_content_l_english.properties
@@ -1661,6 +1661,7 @@ consolidate_power_in_doge_reform_desc코0=수년 동안, 우리 공화국은 도
 
 TTL_ideas코0=삼동맹 자유국 이념
 TTL_ideas_bonus코0=삼동맹 자유국 야망
+teutonic_legacy코0=튜튼 기사단의 유산
 soldier_king코0=프로이센의 군인왕
 BRA_ideas코0=브란덴부르크 이념
 BRA_ideas_start코0=브란덴부르크 전통
