Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/emperor_content_l_english.properties
+++ b/ko/emperor_content_l_english.properties
@@ -1662,7 +1662,9 @@ consolidate_power_in_doge_reform_desc코0=수년 동안, 우리 공화국은 도
 TTL_ideas코0=삼동맹 자유국 이념
 TTL_ideas_bonus코0=삼동맹 자유국 야망
 teutonic_legacy코0=튜튼 기사단의 유산
+teutonic_legacy_desc코0=현재 우리 나라는 완전히 세속화되었지만, 우리 나라가 튜튼 기사단의 잔재 위에 세워진 것을 결코 잊지 말아야 합니다. 신앙으로 단합된, 튜튼의 기사들은 이곳 프로이센에서 동쪽의 야만적인 이교도들로부터 기독교 세계를 보호했으며, 우리 역시 종교 개혁을 우리 나라 전역에 전파하고 그리스도의 참된 가르침에 따라 단합하는 것을 우리의 의무로 삼아야 합니다!
 soldier_king코0=프로이센의 군인왕
+soldier_king_desc코0=대부분의 국가들은 국가가 군대를 보유하지만, 이와 다르게 프로이센은 군대가 국가를 보유하고 있는 국가입니다. 프로이센의 많은 왕들은 군주였던 만큼 군인이었고, 각 왕들은 국가를 개혁했을 뿐만 아니라 군대에 자신의 흔적을 남기며 치세를 끝냈습니다.
 BRA_ideas코0=브란덴부르크 이념
 BRA_ideas_start코0=브란덴부르크 전통
 BRA_ideas_bonus코0=브란덴부르크 야망
